fix "more" cutting on tablette

--- a/src/components/App/app.scss
+++ b/src/components/App/app.scss
@@ -92,7 +92,7 @@
       }
     }
     &--projects {
-      height: 105vh;
+      height: 110vh;
       @include color-themes.themed() {
         background-color: color-themes.ask("primary-color");
       }
