--- a/src/components/Projects/projects.scss
+++ b/src/components/Projects/projects.scss
@@ -41,9 +41,14 @@
     &__carousel {
       width: 80%;
       margin-left: 2em;
+      height: 100%;
+    }
+  }
+}
+@include media.responsive("desktop") {
+  .projects {
+    &__carousel {
       height: 85%;
-      &__chevron {
-      }
     }
   }
 }
